fix and add moral.html

--- a/item.html
+++ b/item.html
@@ -361,7 +361,7 @@
 <tr><td>1295</td><td>【飞雪倾眉线】玉笔山庄·倾眉入队</td><td>春蚕掌谱</td><td>获得春蚕掌谱(161)*1</td></tr>
 <tr><td>1390</td><td>【飞雪灵素线】商家堡·指点胡斐</td><td>春蚕掌谱</td><td>获得春蚕掌谱(161)*1</td></tr>
 <tr><td>2250</td><td>【侠客凌霄线】熊耳山·初见梅芳姑</td><td>梅花拳谱</td><td>获得梅花拳谱(162)*1</td></tr>
-<tr><td>2983</td><td>【射雕雕弓篇】张家口·黄蓉化女装，战欧阳克</td><td>神驼雪山掌谱</td><td>获得神驼雪山掌谱(163)*1</td></tr>
+<tr><td>2983</td><td>【射雕雕弓篇】张家口·黄蓉恢复女装，战欧阳克</td><td>神驼雪山掌谱</td><td>获得神驼雪山掌谱(163)*1</td></tr>
 <tr><td>2370</td><td>【笑傲主线】福州城·战黑白无常</td><td>摧心掌谱</td><td>获得摧心掌谱(164)*1</td></tr>
 <tr><td>1003</td><td>【场景调查】见性峰·箱子</td><td>天长掌谱</td><td>获得天长掌谱(165)*1</td></tr>
 <tr><td>2268</td><td>【侠客凌霄线】镇江城·访长乐帮</td><td>五行六合掌谱</td><td>获得五行六合掌谱(166)*1</td></tr>
@@ -532,7 +532,7 @@
 <tr><td>2076</td><td>【倚天武当线】冰火岛·火蟾支线</td><td>食材</td><td>获得食材(210)*100</td></tr>
 <tr><td>3172</td><td>【神雕龙女线】蜘蛛洞·救周伯通战金轮，龙女入队</td><td>食材</td><td>获得食材(210)*100</td></tr>
 <tr><td>1643</td><td>【场景调查】曼陀山庄·一本账簿</td><td>一本帐簿</td><td>获得一本帐簿(211)*1</td></tr>
-<tr><td>1703</td><td>【场景事件】曼陀山庄·保卫琅寰福地</td><td>一本帐簿</td><td>背包增加一本帐簿(211)*-1</td></tr>
+<tr><td>1703</td><td>【场景事件】曼陀山庄·小无相功支线</td><td>一本帐簿</td><td>背包增加一本帐簿(211)*-1</td></tr>
 <tr><td>2380</td><td>【笑傲日月线】衡阳城·再听笑傲江湖</td><td>广陵散琴曲</td><td>获得广陵散琴曲(212)*1</td></tr>
 <tr><td>2484</td><td>【笑傲五岳线】衡阳城·对话刘菁</td><td>广陵散琴曲</td><td>获得广陵散琴曲(212)*1</td></tr>
 <tr><td>1450</td><td>【鹿鼎神龙线】五台山·五台屠龙</td><td>独脚金刚秘要</td><td>获得独脚金刚秘要(213)*1</td></tr>
@@ -559,7 +559,7 @@
 <tr><td>1437</td><td>【鹿鼎神龙线】庄府·回庄府复命</td><td>裴将军帖</td><td>获得裴将军帖(225)*1</td></tr>
 <tr><td>1508</td><td>【鹿鼎天地线】庄府·回庄府复命</td><td>裴将军帖</td><td>获得裴将军帖(225)*1</td></tr>
 <tr><td>2174</td><td>【倚天蒙古线】少室山·赵敏与父兄决裂</td><td>九花虬</td><td>获得九花虬(226)*1</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>九阴真经梵文总纲</td><td>获得九阴真经梵文总纲(227)*1</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>九阴真经梵文总纲</td><td>获得九阴真经梵文总纲(227)*1</td></tr>
 <tr><td>3068</td><td>【射雕璇玑篇】桃源居·桃源居疗伤</td><td>九阴煅骨篇</td><td>获得九阴煅骨篇(228)*1</td></tr>
 <tr><td>207</td><td>【NPC对话】还施水阁·双儿(休息、四十二章经剧情)</td><td>四十二章经</td><td>获得四十二章经(229)*1</td></tr>
 <tr><td>1573</td><td>【鹿鼎主线】燕子坞·烧四十二章经</td><td>四十二章经</td><td>背包增加四十二章经(229)*-1</td></tr>
@@ -639,7 +639,7 @@
 <tr><td>1656</td><td>【天龙大理篇】善人渡·恶贯满盈</td><td>黑玫瑰</td><td>获得黑玫瑰(280)*1</td></tr>
 <tr><td>2149</td><td>【倚天蒙古线】光明顶·明慧离队</td><td>汗血宝马</td><td>获得汗血宝马(281)*1</td></tr>
 <tr><td>2965</td><td>【射雕雕弓篇】和林城·收服汗血宝马</td><td>汗血宝马</td><td>获得汗血宝马(281)*1</td></tr>
-<tr><td>2983</td><td>【射雕雕弓篇】张家口·黄蓉化女装，战欧阳克</td><td>汗血宝马</td><td>获得汗血宝马(281)*1</td></tr>
+<tr><td>2983</td><td>【射雕雕弓篇】张家口·黄蓉恢复女装，战欧阳克</td><td>汗血宝马</td><td>获得汗血宝马(281)*1</td></tr>
 <tr><td>2134</td><td>【倚天蒙古线】五台山·汗血宝马换卫璧</td><td>汗血宝马</td><td>背包增加汗血宝马(281)*-1</td></tr>
 <tr><td>2980</td><td>【射雕雕弓篇】张家口·初遇小叫化黄蓉</td><td>汗血宝马</td><td>背包增加汗血宝马(281)*-1</td></tr>
 <tr><td>2982</td><td>【射雕雕弓篇】张家口·战白驼侍女</td><td>追风黄</td><td>郭靖(1334)增加追风黄(285)*1</td></tr>
@@ -738,7 +738,7 @@
 <tr><td>1765</td><td>【天龙五凤篇】信阳城·乔峰误伤阿朱</td><td>擒龙功秘要</td><td>萧峰(1330)增加擒龙功秘要(366)*-1</td></tr>
 <tr><td>2158</td><td>【倚天蒙古线】灵蛇岛·灵蛇岛大战</td><td>大力金刚指谱</td><td>获得大力金刚指谱(367)*1</td></tr>
 <tr><td>3079</td><td>【射雕璇玑篇】华山绝顶·洪七公欧阳锋去世</td><td>蛤蟆功诀</td><td>获得蛤蟆功诀(368)*1</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>一阳指谱</td><td>获得一阳指谱(369)*1</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>一阳指谱</td><td>获得一阳指谱(369)*1</td></tr>
 <tr><td>1468</td><td>【鹿鼎神龙线】紫禁城·花开叶凋</td><td>无相劫指谱</td><td>获得无相劫指谱(370)*1</td></tr>
 <tr><td>1548</td><td>【鹿鼎天地线】紫禁城·花开叶凋</td><td>无相劫指谱</td><td>获得无相劫指谱(370)*1</td></tr>
 <tr><td>1949</td><td>【倚天圣火线】灵蛇岛·战波斯总教</td><td>圣火令秘诀</td><td>获得圣火令秘诀(371)*1</td></tr>
@@ -914,15 +914,15 @@
 <tr><td>1494</td><td>【鹿鼎天地线】庄府·救庄三夫人</td><td>移形换位秘笈</td><td>获得移形换位秘笈(536)*1</td></tr>
 <tr><td>2901</td><td>【鸳鸯刀主线】长安城·找到鸯刀，结识骆冰</td><td>燕子三抄水</td><td>获得燕子三抄水(537)*1</td></tr>
 <tr><td>3126</td><td>【神雕莫愁线】绝情谷·绝情谷大战</td><td>七星步法</td><td>获得七星步法(538)*1</td></tr>
-<tr><td>1976</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>壁虎游墙功</td><td>获得壁虎游墙功(539)*1</td></tr>
-<tr><td>1976</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>壁虎游墙功</td><td>获得壁虎游墙功(539)*1</td></tr>
+<tr><td>1976</td><td>【倚天蒙古线】紫霄宫·武当三宝支线2</td><td>壁虎游墙功</td><td>获得壁虎游墙功(539)*1</td></tr>
+<tr><td>1976</td><td>【倚天蒙古线】紫霄宫·武当三宝支线2</td><td>壁虎游墙功</td><td>获得壁虎游墙功(539)*1</td></tr>
 <tr><td>1982</td><td>【倚天武当线】紫霄宫·百岁寿宴惊变</td><td>壁虎游墙功</td><td>获得壁虎游墙功(539)*1</td></tr>
 <tr><td>1672</td><td>【天龙大理篇】万劫谷·赶跑云中鹤</td><td>鹤舞身法</td><td>获得鹤舞身法(541)*1</td></tr>
 <tr><td>2366</td><td>【笑傲主线】太室山·青城派送礼</td><td>雁行轻功</td><td>获得雁行轻功(542)*1</td></tr>
 <tr><td>1320</td><td>【飞雪倾眉线】衡阳城·韦陀门踢馆</td><td>天罡梅花桩</td><td>获得天罡梅花桩(543)*1</td></tr>
 <tr><td>3056</td><td>【射雕璇玑篇】嘉兴城·再战欧阳锋</td><td>瞬息千里秘笈</td><td>获得瞬息千里秘笈(544)*1</td></tr>
-<tr><td>1977</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>梯云纵秘笈</td><td>获得梯云纵秘笈(545)*1</td></tr>
-<tr><td>1977</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>梯云纵秘笈</td><td>获得梯云纵秘笈(545)*1</td></tr>
+<tr><td>1977</td><td>【倚天蒙古线】紫霄宫·武当三宝支线3</td><td>梯云纵秘笈</td><td>获得梯云纵秘笈(545)*1</td></tr>
+<tr><td>1977</td><td>【倚天蒙古线】紫霄宫·武当三宝支线3</td><td>梯云纵秘笈</td><td>获得梯云纵秘笈(545)*1</td></tr>
 <tr><td>2012</td><td>【倚天武当线】圣火厅·光明顶战罢</td><td>梯云纵秘笈</td><td>获得梯云纵秘笈(545)*1</td></tr>
 <tr><td>1272</td><td>【连城水笙线】藏边雪谷·出谷受辱</td><td>身空行</td><td>获得身空行(546)*1</td></tr>
 <tr><td>3131</td><td>【神雕莫愁线】蜘蛛洞·左右互搏支线</td><td>上天梯秘笈</td><td>获得上天梯秘笈(547)*1</td></tr>
@@ -976,9 +976,9 @@
 <tr><td>3089</td><td>【神雕莫愁线】活死人墓·出古墓战李莫愁</td><td>玉女心法</td><td>李莫愁(161)增加玉女心法(579)*1</td></tr>
 <tr><td>3163</td><td>【神雕龙女线】活死人墓·治疗小龙女</td><td>玉女心法</td><td>小龙女(59)增加玉女心法(579)*1</td></tr>
 <tr><td>3185</td><td>【神雕龙女线】活死人墓·先天功支线</td><td>先天功谱</td><td>获得先天功谱(580)*1</td></tr>
-<tr><td>1703</td><td>【场景事件】曼陀山庄·保卫琅寰福地</td><td>小无相功谱</td><td>获得小无相功谱(581)*1</td></tr>
-<tr><td>1635</td><td>【场景调查】嵩州城·八荒六合(神雕龙女线)</td><td>八荒六合唯我独尊功</td><td>获得八荒六合唯我独尊功(582)*1</td></tr>
-<tr><td>1636</td><td>【场景调查】嵩州城·八荒六合(神雕莫愁线)</td><td>八荒六合唯我独尊功</td><td>获得八荒六合唯我独尊功(582)*1</td></tr>
+<tr><td>1703</td><td>【场景事件】曼陀山庄·小无相功支线</td><td>小无相功谱</td><td>获得小无相功谱(581)*1</td></tr>
+<tr><td>1635</td><td>【场景调查】无量玉洞·八荒六合(神雕龙女线)</td><td>八荒六合唯我独尊功</td><td>获得八荒六合唯我独尊功(582)*1</td></tr>
+<tr><td>1636</td><td>【场景调查】无量玉洞·八荒六合(神雕莫愁线)</td><td>八荒六合唯我独尊功</td><td>获得八荒六合唯我独尊功(582)*1</td></tr>
 <tr><td>1856</td><td>【倚天圣火线】紫霄宫·医治无忌</td><td>纯阳无极功</td><td>获得纯阳无极功(583)*1</td></tr>
 <tr><td>2019</td><td>【倚天武当线】玄冥谷·玄冥谷大战</td><td>纯阳无极功</td><td>获得纯阳无极功(583)*1</td></tr>
 <tr><td>2205</td><td>【倚天蒙古线】紫霄宫·灵素医治俞岱岩支线</td><td>纯阳无极功</td><td>获得纯阳无极功(583)*1</td></tr>
@@ -999,9 +999,9 @@
 <tr><td>1611</td><td>【天龙逍遥篇】飘缈峰·过桥双战</td><td>北冥神功秘籍</td><td>获得北冥神功秘籍(593)*1</td></tr>
 <tr><td>1924</td><td>【倚天圣火线】光明顶·救张翠山</td><td>太极功心法</td><td>获得太极功心法(594)*1</td></tr>
 <tr><td>1975</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>太极功心法</td><td>获得太极功心法(594)*1</td></tr>
-<tr><td>1976</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>太极功心法</td><td>获得太极功心法(594)*1</td></tr>
-<tr><td>1977</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>太极功心法</td><td>获得太极功心法(594)*1</td></tr>
-<tr><td>1978</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>太极功心法</td><td>获得太极功心法(594)*1</td></tr>
+<tr><td>1976</td><td>【倚天蒙古线】紫霄宫·武当三宝支线2</td><td>太极功心法</td><td>获得太极功心法(594)*1</td></tr>
+<tr><td>1977</td><td>【倚天蒙古线】紫霄宫·武当三宝支线3</td><td>太极功心法</td><td>获得太极功心法(594)*1</td></tr>
+<tr><td>1978</td><td>【倚天蒙古线】紫霄宫·武当三宝支线4</td><td>太极功心法</td><td>获得太极功心法(594)*1</td></tr>
 <tr><td>2024</td><td>【倚天武当线】紫霄宫·大战赵敏手下</td><td>太极功心法</td><td>获得太极功心法(594)*1</td></tr>
 <tr><td>3233</td><td>【主线流程】燕兴陵·斗转支线战四家将</td><td>斗转星移秘要</td><td>获得斗转星移秘要(595)*1</td></tr>
 <tr><td>1911</td><td>【倚天圣火线】圣火厅·黛绮丝诬陷</td><td>乾坤大挪移心法</td><td>获得乾坤大挪移心法(596)*1</td></tr>
@@ -1111,7 +1111,7 @@
 <tr><td>1912</td><td>【倚天圣火线】圣火厅·素素偷放</td><td>铁焰令</td><td>殷素素(17)增加铁焰令(664)*1</td></tr>
 <tr><td>1756</td><td>【天龙五凤篇】聚贤庄·对话阿朱</td><td>人皮面具</td><td>获得人皮面具(665)*1</td></tr>
 <tr><td>3056</td><td>【射雕璇玑篇】嘉兴城·再战欧阳锋</td><td>逆运经脉诀</td><td>获得逆运经脉诀(666)*1</td></tr>
-<tr><td>2983</td><td>【射雕雕弓篇】张家口·黄蓉化女装，战欧阳克</td><td>缀玉华裳</td><td>获得缀玉华裳(667)*1</td></tr>
+<tr><td>2983</td><td>【射雕雕弓篇】张家口·黄蓉恢复女装，战欧阳克</td><td>缀玉华裳</td><td>获得缀玉华裳(667)*1</td></tr>
 <tr><td>3215</td><td>【场景调查】还施水阁·获得缀玉华裳</td><td>缀玉华裳</td><td>获得缀玉华裳(667)*1</td></tr>
 <tr><td>2980</td><td>【射雕雕弓篇】张家口·初遇小叫化黄蓉</td><td>缀玉华裳</td><td>背包增加缀玉华裳(667)*-1</td></tr>
 <tr><td>2318</td><td>【侠客行主线】侠客岛·双战龙木岛主，得侠客行天书</td><td>侠客行秘要</td><td>获得侠客行秘要(668)*1</td></tr>
@@ -1518,9 +1518,9 @@
 <tr><td>1011</td><td>【场景调查】冰火岛·白熊王</td><td>兔兔美</td><td>获得兔兔美(957)*1</td></tr>
 <tr><td>3213</td><td>【场景调查】还施水阁·获得各种暗器</td><td>洗心观意</td><td>获得洗心观意(958)*1</td></tr>
 <tr><td>3226</td><td>【主线流程】还施水阁·初见双儿</td><td>幻影诛天</td><td>获得幻影诛天(959)*1</td></tr>
-<tr><td>1703</td><td>【场景事件】曼陀山庄·保卫琅寰福地</td><td>没羽飞蝗石</td><td>获得没羽飞蝗石(960)*1</td></tr>
-<tr><td>1703</td><td>【场景事件】曼陀山庄·保卫琅寰福地</td><td>连环镔铁铠</td><td>获得连环镔铁铠(961)*1</td></tr>
-<tr><td>1703</td><td>【场景事件】曼陀山庄·保卫琅寰福地</td><td>银鬃拳花马</td><td>获得银鬃拳花马(962)*1</td></tr>
+<tr><td>1703</td><td>【场景事件】曼陀山庄·小无相功支线</td><td>没羽飞蝗石</td><td>获得没羽飞蝗石(960)*1</td></tr>
+<tr><td>1703</td><td>【场景事件】曼陀山庄·小无相功支线</td><td>连环镔铁铠</td><td>获得连环镔铁铠(961)*1</td></tr>
+<tr><td>1703</td><td>【场景事件】曼陀山庄·小无相功支线</td><td>银鬃拳花马</td><td>获得银鬃拳花马(962)*1</td></tr>
 <tr><td>991</td><td>【NPC对话】还施水阁·嫣儿洗武</td><td>封印之剑</td><td>获得封印之剑(963)*1</td></tr>
 <tr><td>991</td><td>【NPC对话】还施水阁·嫣儿洗武</td><td>魔宫曼陀罗</td><td>获得魔宫曼陀罗(964)*1</td></tr>
 <tr><td>3265</td><td>【主线流程】燕子坞·对话玄鹤子，获得洛阳铲</td><td>麒麟绯绣</td><td>获得麒麟绯绣(965)*1</td></tr>
