--- a/xw.html
+++ b/xw.html
@@ -228,8 +228,8 @@
 <tr><td>1791</td><td>【天龙五凤篇】天龙寺·降服邪龙</td><td>阿紫(47)第7格武功设为天南剑法(721)1级</td></tr>
 <tr><td>1792</td><td>【场景调查】天龙寺·六脉神剑支线</td><td>阿紫(47)第7格武功设为六脉神剑(452)1级</td></tr>
 <tr><td>1793</td><td>【天龙五凤篇】曼陀山庄·与表妹成亲</td><td>阿紫(47)第4格武功设为寒袖拂穴(328)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>阿紫(47)第6格武功设为一阳指(332)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>阿紫(47)第7格武功设为九阴梵纲(956)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>阿紫(47)第6格武功设为一阳指(332)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>阿紫(47)第7格武功设为九阴梵纲(956)1级</td></tr>
 <tr><td>2309</td><td>【侠客行主线】侠客岛·石壁&#39;银鞍照白马&#39;2(战斗)</td><td>阿紫(47)第5格武功设为银鞍白马(744)1级</td></tr>
 <tr><td>2309</td><td>【侠客行主线】侠客岛·石壁&#39;银鞍照白马&#39;2(战斗)</td><td>阿紫(47)第6格武功设为三杯吐然诺(637)1级</td></tr>
 <tr><td>3234</td><td>【主线流程】燕兴陵·易筋经支线</td><td>阿紫(47)第4格武功设为易筋伐髓(268)1级</td></tr>
@@ -249,8 +249,8 @@
 <tr><td>1530</td><td>【鹿鼎天地线】昆明城·建宁阉吴应熊，吴三桂起兵</td><td>黄蓉(56)第5格武功设为控鹤功(318)1级</td></tr>
 <tr><td>1530</td><td>【鹿鼎天地线】昆明城·建宁阉吴应熊，吴三桂起兵</td><td>黄蓉(56)第6格武功设为百战刀法(259)1级</td></tr>
 <tr><td>1591</td><td>【场景调查】高昌迷宫·卫公石碑(天地线见胡逸之后)</td><td>黄蓉(56)第6格武功设为井月刀法(382)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>黄蓉(56)第6格武功设为一阳指(332)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>黄蓉(56)第7格武功设为九阴梵纲(956)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>黄蓉(56)第6格武功设为一阳指(332)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>黄蓉(56)第7格武功设为九阴梵纲(956)1级</td></tr>
 <tr><td>1853</td><td>【天龙雁北篇】杏子林·黄蓉就任帮主，得天龙八部天书</td><td>黄蓉(56)第3格武功设为打狗棒法(458)1级</td></tr>
 <tr><td>1853</td><td>【天龙雁北篇】杏子林·黄蓉就任帮主，得天龙八部天书</td><td>黄蓉(56)天赋设为江山锦绣(913)</td></tr>
 <tr><td>1868</td><td>【倚天圣火线】华阴城·救援方湘筠</td><td>黄蓉(56)第4格武功设为飘雪穿云掌(977)1级</td></tr>
@@ -272,7 +272,7 @@
 <tr><td>2309</td><td>【侠客行主线】侠客岛·石壁&#39;银鞍照白马&#39;2(战斗)</td><td>黄蓉(56)第5格武功设为银鞍白马(744)1级</td></tr>
 <tr><td>2309</td><td>【侠客行主线】侠客岛·石壁&#39;银鞍照白马&#39;2(战斗)</td><td>黄蓉(56)第6格武功设为救赵挥金锤(640)1级</td></tr>
 <tr><td>2352</td><td>【侠客玄素线】凌霄城·移魂大法治疗闵柔</td><td>黄蓉(56)第5格武功设为三清玄功(964)1级</td></tr>
-<tr><td>2983</td><td>【射雕雕弓篇】张家口·黄蓉化女装，战欧阳克</td><td>黄蓉(56)第4格武功设为神驼雪山掌(21)1级</td></tr>
+<tr><td>2983</td><td>【射雕雕弓篇】张家口·黄蓉恢复女装，战欧阳克</td><td>黄蓉(56)第4格武功设为神驼雪山掌(21)1级</td></tr>
 <tr><td>2999</td><td>【射雕雕弓篇】中都城·黄蓉入队</td><td>黄蓉(56)第2格武功设为珑华千纱(164)10级</td></tr>
 <tr><td>3010</td><td>【射雕璇玑篇】长安内城·与黄蓉游湖</td><td>黄蓉(56)第4格武功设为透骨打穴(305)1级</td></tr>
 <tr><td>3010</td><td>【射雕璇玑篇】长安内城·与黄蓉游湖</td><td>黄蓉(56)第5格武功设为飞燕银梭(685)1级</td></tr>
@@ -328,7 +328,7 @@
 <tr><td>3169</td><td>【神雕龙女线】桃花岛·生女儿支线</td><td>黄蓉(56)第7格武功设为逝水波澜(937)1级</td></tr>
 <tr><td>3174</td><td>【神雕龙女线】长安内城·打狗棒支线</td><td>黄蓉(56)第7格武功设为龙象诸天(292)1级</td></tr>
 <tr><td>3174</td><td>【神雕龙女线】长安内城·打狗棒支线</td><td>黄蓉(56)第8格武功设为瑜珈密乘(959)1级</td></tr>
-<tr><td>1635</td><td>【场景调查】嵩州城·八荒六合(神雕龙女线)</td><td>小龙女(59)第5格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1635</td><td>【场景调查】无量玉洞·八荒六合(神雕龙女线)</td><td>小龙女(59)第5格武功设为八荒六合(290)1级</td></tr>
 <tr><td>2309</td><td>【侠客行主线】侠客岛·石壁&#39;银鞍照白马&#39;2(战斗)</td><td>小龙女(59)第5格武功设为银鞍白马(744)1级</td></tr>
 <tr><td>2309</td><td>【侠客行主线】侠客岛·石壁&#39;银鞍照白马&#39;2(战斗)</td><td>小龙女(59)第6格武功设为吴钩霜雪明(639)1级</td></tr>
 <tr><td>3078</td><td>【神雕龙女线】重阳宫·重阳复生支线，得神雕侠侣天书</td><td>小龙女(59)第3格武功设为玉女素心剑(89)1级</td></tr>
@@ -411,16 +411,16 @@
 <tr><td>1630</td><td>【天龙逍遥篇】嵩州城·拜会无崖子(翻译小无相功)</td><td>王语嫣(76)第5格武功设为天山六阳掌(50)1级</td></tr>
 <tr><td>1630</td><td>【天龙逍遥篇】嵩州城·拜会无崖子(翻译小无相功)</td><td>王语嫣(76)第6格武功设为星丸跳掷(700)1级</td></tr>
 <tr><td>1630</td><td>【天龙逍遥篇】嵩州城·拜会无崖子(翻译小无相功)</td><td>王语嫣(76)第7格武功设为冥光气刀(265)1级</td></tr>
-<tr><td>1635</td><td>【场景调查】嵩州城·八荒六合(神雕龙女线)</td><td>王语嫣(76)第5格武功设为八荒六合(290)1级</td></tr>
-<tr><td>1635</td><td>【场景调查】嵩州城·八荒六合(神雕龙女线)</td><td>王语嫣(76)天赋设为逍遥御风(1024)</td></tr>
-<tr><td>1636</td><td>【场景调查】嵩州城·八荒六合(神雕莫愁线)</td><td>王语嫣(76)第5格武功设为八荒六合(290)1级</td></tr>
-<tr><td>1636</td><td>【场景调查】嵩州城·八荒六合(神雕莫愁线)</td><td>王语嫣(76)天赋设为逍遥御风(1024)</td></tr>
+<tr><td>1635</td><td>【场景调查】无量玉洞·八荒六合(神雕龙女线)</td><td>王语嫣(76)第5格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1635</td><td>【场景调查】无量玉洞·八荒六合(神雕龙女线)</td><td>王语嫣(76)天赋设为逍遥御风(1024)</td></tr>
+<tr><td>1636</td><td>【场景调查】无量玉洞·八荒六合(神雕莫愁线)</td><td>王语嫣(76)第5格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1636</td><td>【场景调查】无量玉洞·八荒六合(神雕莫愁线)</td><td>王语嫣(76)天赋设为逍遥御风(1024)</td></tr>
 <tr><td>1695</td><td>【天龙珍珑篇】还施水阁·玉燕试炼</td><td>王语嫣(76)第3格武功设为白虹掌力(43)10级</td></tr>
 <tr><td>1695</td><td>【天龙珍珑篇】还施水阁·玉燕试炼</td><td>王语嫣(76)第4格武功设为无相劫指(333)10级</td></tr>
 <tr><td>1695</td><td>【天龙珍珑篇】还施水阁·玉燕试炼</td><td>王语嫣(76)第2格武功设为天山折梅手(456)10级</td></tr>
 <tr><td>1697</td><td>【天龙珍珑篇】姑苏城·段誉入队</td><td>王语嫣(76)第3格武功设为导气归虚(933)1级</td></tr>
 <tr><td>1697</td><td>【天龙珍珑篇】姑苏城·段誉入队</td><td>王语嫣(76)第4格武功设为龙行虎步(1078)1级</td></tr>
-<tr><td>1703</td><td>【场景事件】曼陀山庄·保卫琅寰福地</td><td>王语嫣(76)第4格武功设为小无相功(289)1级</td></tr>
+<tr><td>1703</td><td>【场景事件】曼陀山庄·小无相功支线</td><td>王语嫣(76)第4格武功设为小无相功(289)1级</td></tr>
 <tr><td>1714</td><td>【天龙珍珑篇】杏子林·进门闯打狗阵</td><td>王语嫣(76)第3格武功设为奇门三才刀(230)1级</td></tr>
 <tr><td>1714</td><td>【天龙珍珑篇】杏子林·进门闯打狗阵</td><td>王语嫣(76)第4格武功设为疯魔杖法(444)1级</td></tr>
 <tr><td>1716</td><td>【天龙珍珑篇】杏子林·与乔峰切磋</td><td>王语嫣(76)第3格武功设为龙爪手(319)1级</td></tr>
@@ -439,8 +439,8 @@
 <tr><td>1793</td><td>【天龙五凤篇】曼陀山庄·与表妹成亲</td><td>王语嫣(76)第4格武功设为寒袖拂穴(328)1级</td></tr>
 <tr><td>1794</td><td>【场景调查】西夏皇宫·壁画支线</td><td>王语嫣(76)第5格武功设为白虹掌力(43)1级</td></tr>
 <tr><td>1794</td><td>【场景调查】西夏皇宫·壁画支线</td><td>王语嫣(76)第6格武功设为魔音搜魂(680)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>王语嫣(76)第6格武功设为一阳指(332)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>王语嫣(76)第7格武功设为九阴梵纲(956)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>王语嫣(76)第6格武功设为一阳指(332)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>王语嫣(76)第7格武功设为九阴梵纲(956)1级</td></tr>
 <tr><td>1809</td><td>【天龙雁北篇】少林后山·告别段誉</td><td>王语嫣(76)第5格武功设为凌波微步(746)1级</td></tr>
 <tr><td>1812</td><td>【NPC对话】少林后山·一苇渡江支线</td><td>王语嫣(76)第8格武功设为踏月香华(932)1级</td></tr>
 <tr><td>1812</td><td>【NPC对话】少林后山·一苇渡江支线</td><td>王语嫣(76)第9格武功设为一苇渡江(751)1级</td></tr>
@@ -577,8 +577,8 @@
 <tr><td>1789</td><td>【天龙五凤篇】天龙寺·杀忽必烈</td><td>钟灵(90)第5格武功设为苍狼血魄(940)1级</td></tr>
 <tr><td>1792</td><td>【场景调查】天龙寺·六脉神剑支线</td><td>钟灵(90)第7格武功设为六脉神剑(452)1级</td></tr>
 <tr><td>1793</td><td>【天龙五凤篇】曼陀山庄·与表妹成亲</td><td>钟灵(90)第4格武功设为寒袖拂穴(328)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>钟灵(90)第6格武功设为一阳指(332)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>钟灵(90)第7格武功设为九阴梵纲(956)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>钟灵(90)第6格武功设为一阳指(332)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>钟灵(90)第7格武功设为九阴梵纲(956)1级</td></tr>
 <tr><td>3177</td><td>【神雕双线】独孤剑冢·获得神雕</td><td>钟灵(90)第2格武功设为神雕展翅(761)10级</td></tr>
 <tr><td>3177</td><td>【神雕双线】独孤剑冢·获得神雕</td><td>钟灵(90)第3格武功设为玄铁剑法(91)10级</td></tr>
 <tr><td>3177</td><td>【神雕双线】独孤剑冢·获得神雕</td><td>钟灵(90)第4格武功设为鹰蛇生死搏(241)1级</td></tr>
@@ -616,10 +616,10 @@
 <tr><td>1973</td><td>【倚天圣火线】紫霄宫·武当三宝支线4</td><td>李沅芷(92)第4格武功设为绕指柔剑(79)1级</td></tr>
 <tr><td>1973</td><td>【倚天圣火线】紫霄宫·武当三宝支线4</td><td>李沅芷(92)天赋设为天无尽藏(1062)</td></tr>
 <tr><td>1975</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>李沅芷(92)第4格武功设为扶柳回风(502)1级</td></tr>
-<tr><td>1976</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>李沅芷(92)第4格武功设为壁虎游墙(729)1级</td></tr>
-<tr><td>1977</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>李沅芷(92)第4格武功设为梯云纵横(735)1级</td></tr>
-<tr><td>1978</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>李沅芷(92)第4格武功设为太极神功(752)1级</td></tr>
-<tr><td>1978</td><td>【倚天蒙古线】紫霄宫·武当三宝支线1</td><td>李沅芷(92)天赋设为天无尽藏(1062)</td></tr>
+<tr><td>1976</td><td>【倚天蒙古线】紫霄宫·武当三宝支线2</td><td>李沅芷(92)第4格武功设为壁虎游墙(729)1级</td></tr>
+<tr><td>1977</td><td>【倚天蒙古线】紫霄宫·武当三宝支线3</td><td>李沅芷(92)第4格武功设为梯云纵横(735)1级</td></tr>
+<tr><td>1978</td><td>【倚天蒙古线】紫霄宫·武当三宝支线4</td><td>李沅芷(92)第4格武功设为太极神功(752)1级</td></tr>
+<tr><td>1978</td><td>【倚天蒙古线】紫霄宫·武当三宝支线4</td><td>李沅芷(92)天赋设为天无尽藏(1062)</td></tr>
 <tr><td>2084</td><td>【倚天武当线】紫霄宫·太极剑支线</td><td>李沅芷(92)第3格武功设为太极剑(90)1级</td></tr>
 <tr><td>2084</td><td>【倚天武当线】紫霄宫·太极剑支线</td><td>李沅芷(92)第4格武功设为绕指柔剑(79)1级</td></tr>
 <tr><td>2084</td><td>【倚天武当线】紫霄宫·太极剑支线</td><td>李沅芷(92)第7格武功设为太极神功(752)1级</td></tr>
@@ -846,8 +846,8 @@
 <tr><td>1791</td><td>【天龙五凤篇】天龙寺·降服邪龙</td><td>木婉清(145)天赋设为帝释天龙(1067)</td></tr>
 <tr><td>1792</td><td>【场景调查】天龙寺·六脉神剑支线</td><td>木婉清(145)第7格武功设为六脉神剑(452)1级</td></tr>
 <tr><td>1793</td><td>【天龙五凤篇】曼陀山庄·与表妹成亲</td><td>木婉清(145)第4格武功设为寒袖拂穴(328)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>木婉清(145)第6格武功设为一阳指(332)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>木婉清(145)第7格武功设为九阴梵纲(956)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>木婉清(145)第6格武功设为一阳指(332)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>木婉清(145)第7格武功设为九阴梵纲(956)1级</td></tr>
 <tr><td>3167</td><td>【神雕龙女线】陆家庄·程英陆无双支线</td><td>陆无双(146)第2格武功设为五毒神掌(7)1级</td></tr>
 <tr><td>3186</td><td>【神雕龙女线】绝情谷·绝情谷支线</td><td>陆无双(146)第3格武功设为玉女素心剑(89)10级</td></tr>
 <tr><td>3186</td><td>【神雕龙女线】绝情谷·绝情谷支线</td><td>陆无双(146)第4格武功设为玉女心经(287)1级</td></tr>
@@ -889,7 +889,7 @@
 <tr><td>2769</td><td>【书剑红花线】楼兰大帐·对话骆冰</td><td>骆冰(154)第4格武功设为夫妻刀法(997)1级</td></tr>
 <tr><td>2911</td><td>【书剑红花线】鸳鸯岛·红袖刀支线</td><td>骆冰(154)第5格武功设为红袖刀(469)1级</td></tr>
 <tr><td>2911</td><td>【书剑红花线】鸳鸯岛·红袖刀支线</td><td>骆冰(154)天赋设为仁者无敌(976)</td></tr>
-<tr><td>1636</td><td>【场景调查】嵩州城·八荒六合(神雕莫愁线)</td><td>李莫愁(161)第6格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1636</td><td>【场景调查】无量玉洞·八荒六合(神雕莫愁线)</td><td>李莫愁(161)第6格武功设为八荒六合(290)1级</td></tr>
 <tr><td>2309</td><td>【侠客行主线】侠客岛·石壁&#39;银鞍照白马&#39;2(战斗)</td><td>李莫愁(161)第6格武功设为银鞍白马(744)1级</td></tr>
 <tr><td>2309</td><td>【侠客行主线】侠客岛·石壁&#39;银鞍照白马&#39;2(战斗)</td><td>李莫愁(161)第7格武功设为救赵挥金锤(640)1级</td></tr>
 <tr><td>3000</td><td>【神雕主线】武昌城·与李莫愁战全真七子</td><td>李莫愁(161)第4格武功设为飞沙走石刀(771)1级</td></tr>
@@ -958,20 +958,20 @@
 <tr><td>1612</td><td>【天龙逍遥篇】飘缈峰·凌虚飞渡</td><td>梅剑(180)第5格武功设为凌虚飞渡(742)1级</td></tr>
 <tr><td>1617</td><td>【天龙逍遥篇】灵鹫宫·石室传功</td><td>梅剑(180)第3格武功设为天山六阳掌(50)1级</td></tr>
 <tr><td>1617</td><td>【天龙逍遥篇】灵鹫宫·石室传功</td><td>梅剑(180)天赋设为傲世神罡(867)</td></tr>
-<tr><td>1635</td><td>【场景调查】嵩州城·八荒六合(神雕龙女线)</td><td>梅剑(180)第4格武功设为八荒六合(290)1级</td></tr>
-<tr><td>1636</td><td>【场景调查】嵩州城·八荒六合(神雕莫愁线)</td><td>梅剑(180)第4格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1635</td><td>【场景调查】无量玉洞·八荒六合(神雕龙女线)</td><td>梅剑(180)第4格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1636</td><td>【场景调查】无量玉洞·八荒六合(神雕莫愁线)</td><td>梅剑(180)第4格武功设为八荒六合(290)1级</td></tr>
 <tr><td>1617</td><td>【天龙逍遥篇】灵鹫宫·石室传功</td><td>兰剑(181)第3格武功设为逍遥神剑(92)1级</td></tr>
 <tr><td>1617</td><td>【天龙逍遥篇】灵鹫宫·石室传功</td><td>兰剑(181)天赋设为惊鸿一剑(865)</td></tr>
-<tr><td>1635</td><td>【场景调查】嵩州城·八荒六合(神雕龙女线)</td><td>兰剑(181)第4格武功设为八荒六合(290)1级</td></tr>
-<tr><td>1636</td><td>【场景调查】嵩州城·八荒六合(神雕莫愁线)</td><td>兰剑(181)第4格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1635</td><td>【场景调查】无量玉洞·八荒六合(神雕龙女线)</td><td>兰剑(181)第4格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1636</td><td>【场景调查】无量玉洞·八荒六合(神雕莫愁线)</td><td>兰剑(181)第4格武功设为八荒六合(290)1级</td></tr>
 <tr><td>1617</td><td>【天龙逍遥篇】灵鹫宫·石室传功</td><td>竹剑(182)第3格武功设为冥光气刀(265)1级</td></tr>
 <tr><td>1617</td><td>【天龙逍遥篇】灵鹫宫·石室传功</td><td>竹剑(182)天赋设为厉刃光寒(866)</td></tr>
-<tr><td>1635</td><td>【场景调查】嵩州城·八荒六合(神雕龙女线)</td><td>竹剑(182)第4格武功设为八荒六合(290)1级</td></tr>
-<tr><td>1636</td><td>【场景调查】嵩州城·八荒六合(神雕莫愁线)</td><td>竹剑(182)第4格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1635</td><td>【场景调查】无量玉洞·八荒六合(神雕龙女线)</td><td>竹剑(182)第4格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1636</td><td>【场景调查】无量玉洞·八荒六合(神雕莫愁线)</td><td>竹剑(182)第4格武功设为八荒六合(290)1级</td></tr>
 <tr><td>1617</td><td>【天龙逍遥篇】灵鹫宫·石室传功</td><td>菊剑(183)第3格武功设为天山折梅手(456)1级</td></tr>
 <tr><td>1617</td><td>【天龙逍遥篇】灵鹫宫·石室传功</td><td>菊剑(183)天赋设为极封苍黄(868)</td></tr>
-<tr><td>1635</td><td>【场景调查】嵩州城·八荒六合(神雕龙女线)</td><td>菊剑(183)第4格武功设为八荒六合(290)1级</td></tr>
-<tr><td>1636</td><td>【场景调查】嵩州城·八荒六合(神雕莫愁线)</td><td>菊剑(183)第4格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1635</td><td>【场景调查】无量玉洞·八荒六合(神雕龙女线)</td><td>菊剑(183)第4格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1636</td><td>【场景调查】无量玉洞·八荒六合(神雕莫愁线)</td><td>菊剑(183)第4格武功设为八荒六合(290)1级</td></tr>
 <tr><td>3125</td><td>【神雕莫愁线】绝情谷·遇裘千尺，脱离鳄潭</td><td>公孙绿萼(220)第3格武功设为枣核钉(697)1级</td></tr>
 <tr><td>3126</td><td>【神雕莫愁线】绝情谷·绝情谷大战</td><td>公孙绿萼(220)第3格武功设为释迦掷象功(670)1级</td></tr>
 <tr><td>3126</td><td>【神雕莫愁线】绝情谷·绝情谷大战</td><td>公孙绿萼(220)第4格武功设为蹑空摘星(728)1级</td></tr>
@@ -1039,12 +1039,12 @@
 <tr><td>1791</td><td>【天龙五凤篇】天龙寺·降服邪龙</td><td>阿朱(225)第7格武功设为天南剑法(721)1级</td></tr>
 <tr><td>1792</td><td>【场景调查】天龙寺·六脉神剑支线</td><td>阿朱(225)第7格武功设为六脉神剑(452)1级</td></tr>
 <tr><td>1793</td><td>【天龙五凤篇】曼陀山庄·与表妹成亲</td><td>阿朱(225)第4格武功设为寒袖拂穴(328)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>阿朱(225)第6格武功设为一阳指(332)1级</td></tr>
-<tr><td>1796</td><td>【NPC对话】桃源居·一阳指支线</td><td>阿朱(225)第7格武功设为九阴梵纲(956)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>阿朱(225)第6格武功设为一阳指(332)1级</td></tr>
+<tr><td>1796</td><td>【天龙五凤篇】桃源居·一阳指支线</td><td>阿朱(225)第7格武功设为九阴梵纲(956)1级</td></tr>
 <tr><td>3234</td><td>【主线流程】燕兴陵·易筋经支线</td><td>阿朱(225)第4格武功设为易筋伐髓(268)1级</td></tr>
 <tr><td>3234</td><td>【主线流程】燕兴陵·易筋经支线</td><td>阿朱(225)第5格武功设为参合指(450)1级</td></tr>
-<tr><td>1635</td><td>【场景调查】嵩州城·八荒六合(神雕龙女线)</td><td>阿碧(226)第5格武功设为八荒六合(290)1级</td></tr>
-<tr><td>1636</td><td>【场景调查】嵩州城·八荒六合(神雕莫愁线)</td><td>阿碧(226)第5格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1635</td><td>【场景调查】无量玉洞·八荒六合(神雕龙女线)</td><td>阿碧(226)第5格武功设为八荒六合(290)1级</td></tr>
+<tr><td>1636</td><td>【场景调查】无量玉洞·八荒六合(神雕莫愁线)</td><td>阿碧(226)第5格武功设为八荒六合(290)1级</td></tr>
 <tr><td>1728</td><td>【天龙珍珑篇】嵩州城·拜访薛慕华</td><td>阿碧(226)第3格武功设为三笑逍遥散(1013)1级</td></tr>
 <tr><td>1732</td><td>【天龙珍珑篇】嵩州城·阿碧战苏星河</td><td>阿碧(226)第3格武功设为梵音普安奏(1015)1级</td></tr>
 <tr><td>1732</td><td>【天龙珍珑篇】嵩州城·阿碧战苏星河</td><td>阿碧(226)第4格武功设为小无相功(289)1级</td></tr>
